moved the rasl summary file, and added a report file.
Started compiling summaries and adding notes about the main reference

--- a/summaries/rasl_literature_review.tex
+++ b/summaries/rasl_literature_review.tex
@@ -2,7 +2,7 @@
 % EE227A Project by Nathan Lam
 %%%%%%%%%%%%%%%%%%
 
-\documentclass{../../common/projectreport}
+\documentclass{../common/projectreport}
 
 \DeclareMathOperator*{\argmin}{arg\,min}
 
